# webauthn-demo

./: .gitignore  default.nix  logfile  release.nix
backend/: backend.cabal
backend/src/: Backend.hs
backend/src/Backend/: Util.hs
backend/src/Backend/DB/: CredentialEntry.hs  DB.hs  User.hs
common/: common.cabal
common/src/Common/: Api.hs  Route.hs  RouteUtil.hs
frontend/: frontend.cabal
frontend/src/: Frontend.hs  Util.hs
